--- a/notebooks_interpretation/20200330_flu_plate.ipynb
+++ b/notebooks_interpretation/20200330_flu_plate.ipynb
@@ -96,151 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>well_id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>dilution</th>\n",
-       "      <th>serum</th>\n",
-       "      <th>day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A1</td>\n",
-       "      <td>Control</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>HumanReferencePlasma</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A2</td>\n",
-       "      <td>Control</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>anti-HA mAb MEDI8852</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A3</td>\n",
-       "      <td>Control</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>antii-HA mAb TF19</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>Diagnostic</td>\n",
-       "      <td>1.000000e-03</td>\n",
-       "      <td>MS</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A5</td>\n",
-       "      <td>Diagnostic</td>\n",
-       "      <td>1.000000e-03</td>\n",
-       "      <td>MS</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>H8</td>\n",
-       "      <td>Diagnostic</td>\n",
-       "      <td>6.100000e-08</td>\n",
-       "      <td>005-18</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>H9</td>\n",
-       "      <td>Diagnostic</td>\n",
-       "      <td>6.100000e-08</td>\n",
-       "      <td>005-18</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>H10</td>\n",
-       "      <td>Diagnostic</td>\n",
-       "      <td>6.100000e-08</td>\n",
-       "      <td>005-18</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>H11</td>\n",
-       "      <td>Diagnostic</td>\n",
-       "      <td>6.100000e-08</td>\n",
-       "      <td>006</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>H12</td>\n",
-       "      <td>Control</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>AssayDiluentControl</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>96 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   well_id        type      dilution                 serum day\n",
-       "0       A1     Control  1.000000e+00  HumanReferencePlasma   0\n",
-       "1       A2     Control  1.000000e+00  anti-HA mAb MEDI8852   0\n",
-       "2       A3     Control  1.000000e+00     antii-HA mAb TF19   0\n",
-       "3       A4  Diagnostic  1.000000e-03                    MS   0\n",
-       "4       A5  Diagnostic  1.000000e-03                    MS   7\n",
-       "..     ...         ...           ...                   ...  ..\n",
-       "91      H8  Diagnostic  6.100000e-08                005-18   0\n",
-       "92      H9  Diagnostic  6.100000e-08                005-18   7\n",
-       "93     H10  Diagnostic  6.100000e-08                005-18  18\n",
-       "94     H11  Diagnostic  6.100000e-08                   006   7\n",
-       "95     H12     Control  1.000000e+00   AssayDiluentControl   0\n",
-       "\n",
-       "[96 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 '0' '7' '14' '21' '18']\n"
+     ]
     }
    ],
    "source": [
@@ -252,12 +116,13 @@
     "plate_info_df = pd.concat([plate_info_df, serum_day_df], axis=1)\n",
     "plate_info_df.drop(['Sera ID'], axis=1, inplace=True)\n",
     "plate_info_df\n",
+    "print(plate_info_df['day'].unique())\n",
     "# plate_info_df['serum'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +412,7 @@
        "35            5            5          xkappa biotin"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,6 +422,7 @@
     "antigen_df = pd.read_excel(antigenOD_path, sheet_name='antigens', converters=converter, index_col=0)\n",
     "antigen_df = antigen_df.unstack().reset_index(name='antigen') # unpivot (linearize) the table\n",
     "antigen_df.rename(columns={'level_0': 'antigen_row', 'level_1': 'antigen_col'}, inplace=True)\n",
+    "\n",
     "antigen_df"
    ]
   },
