organized the notebooks for clarity.

--- a/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
+++ b/notebooks_interpretation/20200115_plate4_AEP_Feb3_6mousesera.ipynb
@@ -1190,9 +1190,9 @@
    "source": [
     "## Compare OD curves for antigen 114 for mouse 2 vs mouse 6.\n",
     "\n",
-    "#There are 2 biological replicates for each mouse: mouse 2 is columns 3 and 4, and mouse 6 is columns 11 and 12.\n",
-    "#There are two technical replicates (spots) for antigen 114 in each well. \n",
-    "#Serial dilutions are across row-A to row-G, starting with 1:50 dilution in row-A.\n",
+    "There are 2 biological replicates for each mouse: mouse 2 is columns 3 and 4, and mouse 6 is columns 11 and 12.\n",
+    "There are two technical replicates (spots) for antigen 114 in each well. \n",
+    "Serial dilutions are across row-A to row-G, starting with 1:50 dilution in row-A.\n",
     "\n",
     "#==============below is code relevant to another plate==============="
    ]
@@ -1280,7 +1280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
