--- a/notebooks_interpretation/20200330_March25_flutasteplate_1/FluPlateInterpretation_consolidated.ipynb
+++ b/notebooks_interpretation/20200330_March25_flutasteplate_1/FluPlateInterpretation_consolidated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,19 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_folder=r'/Volumes/GoogleDrive/My Drive/ELISAarrayReader/images_scienion/2020-03-30-15-08-05-COVD_March25_fluplatetest_AdamsPlate'\n",
     "plateinfo_path=os.path.join(data_folder,'PlateInfoFLuplate.csv')\n",
-    "antigenOD_path=os.path.join(data_folder,'interpolationODs.xlsx') #this is data from SMG interpolation approach\n",
-    "intensityBG_path=os.path.join(data_folder,'2020-03-31-12-07-21-COVID_March31_fluanalysis4.xlsx')"
+    "antigeninfo_path=os.path.join(data_folder,'robin_antigens.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +218,7 @@
        "[96 rows x 5 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,37 +273,37 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xIgG-Fc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xIgG-Fc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xIgG-Fc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -466,25 +465,25 @@
        "      <th>32</th>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GFP-foldon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GFP-foldon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GFP-foldon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -492,12 +491,12 @@
       ],
       "text/plain": [
        "    antigen_row  antigen_col                antigen\n",
-       "0             0            0                    NaN\n",
-       "1             0            1                    NaN\n",
-       "2             0            2                    NaN\n",
-       "3             0            3                    NaN\n",
-       "4             0            4                    NaN\n",
-       "5             0            5                    NaN\n",
+       "0             0            0          xkappa-biotin\n",
+       "1             0            1          xkappa-biotin\n",
+       "2             0            2                xIgG-Fc\n",
+       "3             0            3                xIgG-Fc\n",
+       "4             0            4                xIgG-Fc\n",
+       "5             0            5          xkappa-biotin\n",
        "6             1            0  Flu vaccine 2018-2019\n",
        "7             1            1                  H1 HA\n",
        "8             1            2                  H3 HA\n",
@@ -524,20 +523,20 @@
        "29            4            5             HA FluB II\n",
        "30            5            0                    NaN\n",
        "31            5            1                    NaN\n",
-       "32            5            2                    NaN\n",
-       "33            5            3                    NaN\n",
-       "34            5            4                    NaN\n",
-       "35            5            5                    NaN"
+       "32            5            2             GFP-foldon\n",
+       "33            5            3             GFP-foldon\n",
+       "34            5            4             GFP-foldon\n",
+       "35            5            5          xkappa-biotin"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "converter = {col: str for col in range(0,7)}\n",
-    "antigen_df = pd.read_excel(antigenOD_path, sheet_name='antigens', converters=converter, index_col=0)\n",
+    "antigen_df = pd.read_excel(antigeninfo_path, sheet_name='antigens', converters=converter, index_col=0)\n",
     "antigen_df = antigen_df.unstack().reset_index(name='antigen') # unpivot (linearize) the table\n",
     "antigen_df.rename(columns={'level_0': 'antigen_row', 'level_1': 'antigen_col'}, inplace=True)\n",
     "antigen_df"
@@ -547,31 +546,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read ODs of all wells"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Read data"
+    "# Read ODs of all wells - robin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "robinOD_path=os.path.join(data_folder,'robin_ODs.xlsx')\n",
     "row_label=['A','B','C','D','E','F','G','H']\n",
     "col_label=[str(idx) for idx in np.arange(12)+1]\n",
     "antigenOD=np.empty((8,12,6,6)) # 96 wells, 6 antigen rows, 8 antigen columns\n",
-    "wellID=np.empty((8,12),dtype=object)"
+    "wellID=np.empty((8,12),dtype=object)\n",
+    "\n",
+    "# scienion_path=os.path.join(data_folder,'2020-03-31-12-07-21-COVID_March31_fluanalysis4.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -701,51 +696,50 @@
        "[3456 rows x 4 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read all wells into dictionary and into a 4D numpy array.\n",
-    "OD_df = pd.DataFrame()\n",
+    "# Read all wells into dataframe and into a 4D numpy array.\n",
+    "robinOD_df = pd.DataFrame()\n",
     "for r in np.arange(8):\n",
     "    for c in np.arange(12):\n",
     "        well_key = row_label[r]+col_label[c]\n",
-    "        OD_1_well_df = pd.read_excel(antigenOD_path, sheet_name=well_key, index_col=0)\n",
+    "        OD_1_well_df = pd.read_excel(robinOD_path, sheet_name=well_key, index_col=0)\n",
     "        OD_1_well_df = OD_1_well_df.unstack().reset_index(name='OD') # unpivot (linearize) the table\n",
     "        OD_1_well_df.rename(columns={'level_0': 'antigen_row', 'level_1': 'antigen_col'}, inplace=True)\n",
     "        OD_1_well_df['well_id'] = well_key\n",
     "        wellID[r,c] = well_key\n",
-    "        OD_df = OD_df.append(OD_1_well_df, ignore_index=True)\n",
-    "OD_df"
+    "        robinOD_df = robinOD_df.append(OD_1_well_df, ignore_index=True)\n",
+    "robinOD_df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merge tables into one"
+    "## Merge tables into one"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OD_df = pd.merge(OD_df,\n",
+    "robinOD_df = pd.merge(robinOD_df,\n",
     "                 antigen_df,\n",
     "                 how='left', on=['antigen_row', 'antigen_col'])\n",
-    "OD_df = pd.merge(OD_df,\n",
+    "robinOD_df = pd.merge(robinOD_df,\n",
     "                 plate_info_df,\n",
-    "                 how='left', on=['well_id'])\n",
-    "\n"
+    "                 how='left', on=['well_id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +781,7 @@
        "      <td>0</td>\n",
        "      <td>0.243091</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -799,7 +793,7 @@
        "      <td>1</td>\n",
        "      <td>0.177513</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -811,7 +805,7 @@
        "      <td>2</td>\n",
        "      <td>0.104507</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xIgG-Fc</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -823,7 +817,7 @@
        "      <td>3</td>\n",
        "      <td>0.087800</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xIgG-Fc</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -835,7 +829,7 @@
        "      <td>4</td>\n",
        "      <td>0.074499</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xIgG-Fc</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -847,7 +841,7 @@
        "      <td>5</td>\n",
        "      <td>0.154753</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -1171,7 +1165,7 @@
        "      <td>2</td>\n",
        "      <td>0.014736</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GFP-foldon</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -1183,7 +1177,7 @@
        "      <td>3</td>\n",
        "      <td>0.013925</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GFP-foldon</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -1195,7 +1189,7 @@
        "      <td>4</td>\n",
        "      <td>0.010383</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GFP-foldon</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -1207,7 +1201,7 @@
        "      <td>5</td>\n",
        "      <td>0.202439</td>\n",
        "      <td>A2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>xkappa-biotin</td>\n",
        "      <td>Control</td>\n",
        "      <td>1.0</td>\n",
        "      <td>anti-HA mAb MEDI8852</td>\n",
@@ -1219,12 +1213,12 @@
       ],
       "text/plain": [
        "    antigen_row  antigen_col        OD well_id                antigen  \\\n",
-       "36            0            0  0.243091      A2                    NaN   \n",
-       "37            0            1  0.177513      A2                    NaN   \n",
-       "38            0            2  0.104507      A2                    NaN   \n",
-       "39            0            3  0.087800      A2                    NaN   \n",
-       "40            0            4  0.074499      A2                    NaN   \n",
-       "41            0            5  0.154753      A2                    NaN   \n",
+       "36            0            0  0.243091      A2          xkappa-biotin   \n",
+       "37            0            1  0.177513      A2          xkappa-biotin   \n",
+       "38            0            2  0.104507      A2                xIgG-Fc   \n",
+       "39            0            3  0.087800      A2                xIgG-Fc   \n",
+       "40            0            4  0.074499      A2                xIgG-Fc   \n",
+       "41            0            5  0.154753      A2          xkappa-biotin   \n",
        "42            1            0  0.012528      A2  Flu vaccine 2018-2019   \n",
        "43            1            1  0.000342      A2                  H1 HA   \n",
        "44            1            2 -0.001378      A2                  H3 HA   \n",
@@ -1251,10 +1245,10 @@
        "65            4            5  0.000171      A2             HA FluB II   \n",
        "66            5            0  0.203577      A2                    NaN   \n",
        "67            5            1 -0.002260      A2                    NaN   \n",
-       "68            5            2  0.014736      A2                    NaN   \n",
-       "69            5            3  0.013925      A2                    NaN   \n",
-       "70            5            4  0.010383      A2                    NaN   \n",
-       "71            5            5  0.202439      A2                    NaN   \n",
+       "68            5            2  0.014736      A2             GFP-foldon   \n",
+       "69            5            3  0.013925      A2             GFP-foldon   \n",
+       "70            5            4  0.010383      A2             GFP-foldon   \n",
+       "71            5            5  0.202439      A2          xkappa-biotin   \n",
        "\n",
        "       type  dilution                 serum  day  \n",
        "36  Control       1.0  anti-HA mAb MEDI8852    0  \n",
@@ -1295,21 +1289,21 @@
        "71  Control       1.0  anti-HA mAb MEDI8852    0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check well A2\n",
-    "OD_df[OD_df['well_id']=='A2']\n"
+    "robinOD_df[robinOD_df['well_id']=='A2']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read analysis output from Scienion "
+    "# Read output from Scienion Analyzer"
    ]
   },
   {
@@ -3795,7 +3789,7 @@
    ],
    "source": [
     "serum = 'HumanReferencePlasma'\n",
-    "sub_df = OD_df[(OD_df['serum']==serum)] \n",
+    "sub_df = robinOD_df[(robinOD_df['serum']==serum)] \n",
     "# ref_plm_df = ref_plm_df.dropna()\n",
     "plt.figure(figsize =(8, 6))\n",
     "ax = sns.lineplot(x=\"dilution\", y=\"OD\", hue='antigen', data=sub_df)\n",
@@ -3848,7 +3842,7 @@
    ],
    "source": [
     "day = 0\n",
-    "sub_df = OD_df[(OD_df['day']==day)] \n",
+    "sub_df = robinOD_df[(robinOD_df['day']==day)] \n",
     "plt.figure(figsize =(8, 6))\n",
     "ax = sns.relplot(x=\"dilution\", y=\"OD\",\n",
     "                hue=\"antigen\", col=\"serum\", \n",
@@ -3996,7 +3990,7 @@
     "            df_day_fit['day'] = day\n",
     "            df_fit = df_fit.append(df_day_fit)  \n",
     "    return df_fit\n",
-    "OD_df_fit = fit2df(OD_df, fourPL)"
+    "robinOD_df_fit = fit2df(robinOD_df, fourPL)"
    ]
   },
   {
@@ -4210,7 +4204,7 @@
     }
    ],
    "source": [
-    "OD_df_fit"
+    "robinOD_df_fit"
    ]
   },
   {
@@ -4234,16 +4228,16 @@
    "source": [
     "day = 7\n",
     "serum_type = 'Diagnostic'\n",
-    "sub_df = OD_df[(OD_df['day']==day) & (OD_df['type']==serum_type)]\n",
+    "sub_df = robinOD_df[(robinOD_df['day']==day) & (robinOD_df['type']==serum_type)]\n",
     "\n",
     "g = sns.lmplot(x=\"dilution\", y=\"OD\",\n",
     "                hue=\"serum\", col=\"antigen\", ci='sd',\n",
     "                 data=sub_df, col_wrap=3, fit_reg=False, x_estimator=np.mean)\n",
     "ax.set(xscale=\"log\")\n",
-    "sub_OD_df_fit=OD_df_fit[(OD_df_fit['day']==day) & (OD_df_fit['type']==serum_type)]\n",
+    "sub_robinOD_df_fit=robinOD_df_fit[(robinOD_df_fit['day']==day) & (robinOD_df_fit['type']==serum_type)]\n",
     "\n",
     "for antigen, ax in zip(sub_df['antigen'].unique(), g.axes.flat):\n",
-    "    df_fit = sub_OD_df_fit[sub_OD_df_fit['antigen']==antigen]\n",
+    "    df_fit = sub_robinOD_df_fit[sub_robinOD_df_fit['antigen']==antigen]\n",
     "    sns.lineplot(x=\"dilution\", y=\"OD\", hue='serum', data=df_fit, ax=ax, legend=False)\n",
     "    ax.set(xscale=\"log\")"
    ]
@@ -4264,11 +4258,11 @@
    ],
    "source": [
     "serum = 'AssayDiluentControl'\n",
-    "sub_df = OD_df[(OD_df['serum']==serum)]\n",
+    "sub_df = robinOD_df[(robinOD_df['serum']==serum)]\n",
     "print(sub_df['dilution'].unique())\n",
     "\n",
     "serum = 'ab115777 RabbitTubulinControl'\n",
-    "sub_df = OD_df[(OD_df['serum']==serum)]\n",
+    "sub_df = robinOD_df[(robinOD_df['serum']==serum)]\n",
     "print(sub_df['dilution'].unique())"
    ]
   },
@@ -4417,7 +4411,7 @@
    ],
    "source": [
     "converter = {col: str for col in range(0,7)}\n",
-    "antigens_dataframe=pd.read_excel(antigenOD_path, sheet_name='antigens', converters=converter)\n",
+    "antigens_dataframe=pd.read_excel(robinOD_path, sheet_name='antigens', converters=converter)\n",
     "antigens=antigens_dataframe.to_numpy()[:,1:] \n",
     "pprint(antigens)"
    ]
@@ -4458,7 +4452,7 @@
     "for r in np.arange(8):\n",
     "    for c in np.arange(12):\n",
     "        well_key = row_label[r]+col_label[c]\n",
-    "        antigenOD_dataframe=pd.read_excel(antigenOD_path, sheet_name=well_key)\n",
+    "        antigenOD_dataframe=pd.read_excel(robinOD_path, sheet_name=well_key)\n",
     "        antigenOD[r,c,:,:]=antigenOD_dataframe.to_numpy()[:,1:] # First column is simply the index. to_numpy returns 6x9 array.\n",
     "        wellID[r,c] = well_key"
    ]
@@ -5065,9 +5059,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:serology]",
+   "display_name": "Python [conda env:serocovid]",
    "language": "python",
-   "name": "conda-env-serology-py"
+   "name": "conda-env-serocovid-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5079,7 +5073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
