fixed memory issue

--- a/notebooks_interpretation/20200330_March25_flutasteplate_1/FluPlateInterpretationV4_smg.ipynb
+++ b/notebooks_interpretation/20200330_March25_flutasteplate_1/FluPlateInterpretationV4_smg.ipynb
@@ -4266,7 +4266,8 @@
     "                        hue=\"serum\", col=\"antigen\", ci='sd', style='pipeline',\n",
     "                         data=day_df, col_wrap=3, estimator=np.mean, kind='line')\n",
     "            g.set(xscale=\"log\")\n",
-    "            plt.savefig(os.path.join(data_folder, '_'.join([serum, 'day', str(day), y + '.jpg'])), dpi=300, bbox_inches='tight')"
+    "            plt.savefig(os.path.join(data_folder, '_'.join([serum, 'day', str(day), y + '.jpg'])), dpi=300, bbox_inches='tight')\n",
+    "            plt.close()"
    ]
   },
   {
