added metadata parser class added constants namespace moved notebooks to separate folders

--- a/array_analyzer/extract/txt_parser_nb.ipynb
+++ b/array_analyzer/extract/txt_parser_nb.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "is_executing": false
     }
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -35,7 +34,7 @@
        "'\\nfor this typical ETL pattern, this notebook explores EXTRACT\\n\\n'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -59,7 +58,8 @@
    },
    "outputs": [],
    "source": [
-    "plate1_path = 'Plates_given_to_manu/2020-01-15_plate4_AEP_Feb3_6mousesera'\n",
+    "plate1_path='/Volumes/GoogleDrive/My Drive/ELISAarrayReader/images_scienion/2020-01-15_plate4_AEP_Feb3_6mousesera'\n",
+    "# plate1_path = 'Plates_given_to_manu/2020-01-15_plate4_AEP_Feb3_6mousesera'\n",
     "plate1_gal = plate1_path+os.sep+'8x6_test.gal'\n",
     "plate1_xml = plate1_path+os.sep+'8x6_test.conf.xml'\n"
    ]
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -391,19 +391,19 @@
    "outputs": [],
    "source": [
     "\n",
-    "xml_spot_array_list = [[[None] for i in range(columns)] for j in range(rows)]\n",
+    "# xml_spot_array_list = [[[None] for i in range(columns)] for j in range(rows)]\n",
     "xml_spot_array_numpy = np.empty(shape=(rows, columns), dtype=np.dtype('U100'))\n",
     "\n",
-    "xml_spot_array_list_ID = [[[None] for i in range(columns)] for j in range(rows)]\n",
+    "# xml_spot_array_list_ID = [[[None] for i in range(columns)] for j in range(rows)]\n",
     "xml_spot_array_numpy_ID = np.empty(shape=(rows, columns), dtype=np.dtype('U100'))\n",
     "\n",
-    "xml_spot_array_list_antigen = [[[None] for i in range(columns)] for j in range(rows)]\n",
+    "# xml_spot_array_list_antigen = [[[None] for i in range(columns)] for j in range(rows)]\n",
     "xml_spot_array_numpy_antigen = np.empty(shape=(rows, columns), dtype=np.dtype('U100'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -437,7 +437,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Reference, Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Reference, Diagnostic'],\n",
+       "       ['Reference, Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Reference, PositiveControl'],\n",
+       "       ['Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic'],\n",
+       "       ['Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic'],\n",
+       "       ['Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Reference, NegativeControl'],\n",
+       "       ['Reference, Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Diagnostic', 'Diagnostic', 'Diagnostic', 'Diagnostic',\n",
+       "        'Reference, Diagnostic']], dtype='<U100')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xml_spot_array_numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -462,6 +497,35 @@
     "        anti[np.where(ids==spot)] = antigen\n",
     "        \n",
     "xml_spot_array_numpy_antigen = anti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7', ''],\n",
+       "       ['', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7', ''],\n",
+       "       ['anti-HIS tag', '15731', '15742', '15750', '15878', '15946',\n",
+       "        '15960', 'Q411'],\n",
+       "       ['anti-HIS tag', '15731', '15742', '15750', '15878', '15946',\n",
+       "        '15960', 'Q411'],\n",
+       "       ['anti-HIS tag', '15974', '16061', 'FVM04', 'VIC122', 'Q206',\n",
+       "        'Q314', ''],\n",
+       "       ['', '15974', '16061', 'FVM04', 'VIC122', 'Q206', 'Q314', '']],\n",
+       "      dtype='<U100')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xml_spot_array_numpy_antigen"
    ]
   },
   {
@@ -518,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -529,25 +593,27 @@
     {
      "data": {
       "text/plain": [
-       "array([['', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7', ''],\n",
-       "       ['', '114', '100', 'KZ52', 'c13C6', 'c2G4', 'c4G7', ''],\n",
-       "       ['anti-HIS tag', '15731', '15742', '15750', '15878', '15946',\n",
-       "        '15960', 'Q411'],\n",
-       "       ['anti-HIS tag', '15731', '15742', '15750', '15878', '15946',\n",
-       "        '15960', 'Q411'],\n",
-       "       ['anti-HIS tag', '15974', '16061', 'FVM04', 'VIC122', 'Q206',\n",
-       "        'Q314', ''],\n",
-       "       ['', '15974', '16061', 'FVM04', 'VIC122', 'Q206', 'Q314', '']],\n",
-       "      dtype='<U100')"
+       "array([['', 'spot-1-2', 'spot-1-3', 'spot-1-4', 'spot-1-5', 'spot-1-6',\n",
+       "        'spot-1-7', ''],\n",
+       "       ['', 'spot-2-2', 'spot-2-3', 'spot-2-4', 'spot-2-5', 'spot-2-6',\n",
+       "        'spot-2-7', 'spot-2-8'],\n",
+       "       ['spot-3-1', 'spot-3-2', 'spot-3-3', 'spot-3-4', 'spot-3-5',\n",
+       "        'spot-3-6', 'spot-3-7', 'spot-3-8'],\n",
+       "       ['spot-4-1', 'spot-4-2', 'spot-4-3', 'spot-4-4', 'spot-4-5',\n",
+       "        'spot-4-6', 'spot-4-7', 'spot-4-8'],\n",
+       "       ['spot-5-1', 'spot-5-2', 'spot-5-3', 'spot-5-4', 'spot-5-5',\n",
+       "        'spot-5-6', 'spot-5-7', 'spot-5-8'],\n",
+       "       ['', 'spot-6-2', 'spot-6-3', 'spot-6-4', 'spot-6-5', 'spot-6-6',\n",
+       "        'spot-6-7', '']], dtype='<U100')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xml_spot_array_numpy_antigen"
+    "ids"
    ]
   },
   {
