incorporated Jenny's and Bryant's comments

--- a/array_analyzer/extract/icp_initialization.ipynb
+++ b/array_analyzer/extract/icp_initialization.ipynb
@@ -96,7 +96,7 @@
     "    segmethod='otsu',\n",
     "    detmethod='region',\n",
     ")\n",
-    "im_crop = image_parser.crop_image(image, cx, cy, r, border_=0)\n",
+    "im_crop = image_parser.crop_image_at_center(image, cx, cy, r, border_=0)\n",
     "# Remove background\n",
     "background = img_processing.get_background(im_crop, fit_order=2)\n",
     "im_crop = (im_crop / background * np.mean(background)).astype(np.uint8)"
