--- a/array_analyzer/extract/txt_parser_nb.ipynb
+++ b/array_analyzer/extract/txt_parser_nb.ipynb
@@ -15,7 +15,8 @@
     "import openpyxl as xl\n",
     "import csv\n",
     "import os\n",
-    "import xmltodict"
+    "import xmltodict\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -639,6 +640,142 @@
    ],
    "source": [
     "xml_spot_array_numpy_antigen.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlsx_template = '/Volumes/GoogleDrive/My Drive/ELISAarrayReader/data_for_tests_and_github/Metadata_and_Plate_configuration.xlsx'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plate_info = pd.read_excel(xlsx_template, usecols='A:M', sheet_name=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['imaging_and_array_parameters', 'array_antigens', 'well_antibody_name', 'well_antibody_concentration', 'sample', 'sample_concentration'])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = plate_info['imaging_and_array_parameters']\n",
+    "params = info.to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.0049\n",
+       "1        NaN\n",
+       "2     6.0000\n",
+       "3     6.0000\n",
+       "4     0.4100\n",
+       "5     0.4050\n",
+       "6     0.2000\n",
+       "7     0.0500\n",
+       "8     0.0500\n",
+       "9     0.3000\n",
+       "10    0.1000\n",
+       "11    0.0049\n",
+       "Name: Value, dtype: float64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info.keys()\n",
+    "info['Value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Parameter': 'pixel_size', 'Value': 0.0049},\n",
+       " {'Parameter': nan, 'Value': nan},\n",
+       " {'Parameter': 'rows', 'Value': 6.0},\n",
+       " {'Parameter': 'columns', 'Value': 6.0},\n",
+       " {'Parameter': 'v_pitch', 'Value': 0.41},\n",
+       " {'Parameter': 'h_pitch', 'Value': 0.405},\n",
+       " {'Parameter': 'spot_width', 'Value': 0.2},\n",
+       " {'Parameter': 'bg_offset', 'Value': 0.05},\n",
+       " {'Parameter': 'bg_thickness', 'Value': 0.05},\n",
+       " {'Parameter': 'max_diam', 'Value': 0.3},\n",
+       " {'Parameter': 'min_diam', 'Value': 0.1},\n",
+       " {'Parameter': 'pixel_size', 'Value': 0.0049}]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params\n",
+    "# for entry in params:\n",
+    "#     print(f\"parameter = {entry['Parameter']}\")\n",
+    "#     print(f\"value = {entry['Value']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-65-aa91df7ee856>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Value'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'Value'"
+     ]
+    }
+   ],
+   "source": [
+    "params['Value']"
    ]
   },
   {
